--- a/appgui/templates/gui.html
+++ b/appgui/templates/gui.html
@@ -5,22 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TextFSM Parser</title>
-  <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    /> -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/static/css/codemirror.css" />
   <link rel="stylesheet" href="/static/css/shadowfox.css" />
   <link rel="stylesheet" href="/static/css/parseatron.css?ver=123" />
+  <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/codemirror.js"></script>
-  <script src="/static/mode/yaml/yaml.js"></script>
-  <script src="/static/mode/jinja2/jinja2.js"></script>
-  <script src="/static/mode/python/python.js"></script>
-  <script src="/static/mode/xml/xml.js"></script>
 </head>
 
 <body>
@@ -81,124 +72,115 @@
   <script src="/static/js/bootstrap.bundle.min.js"></script>
   <!-- <script src="/static/js/parser.js"></script> -->
   <script>
-    let selected_mode = "textfsm";
-    let split_size = 2;
-
-    document.getElementById("text_input").value = "Enter your CLI text here";
-    document.getElementById(
-      "template"
-    ).value = `And your ${selected_mode} template here`;
-    document.getElementById("result").value = `View your result here`;
-
-    var txt_area = document.getElementById("text_input");
-    var text_editor = CodeMirror.fromTextArea(txt_area, {
-      lineNumbers: true,
-      theme: "shadowfox",
-      matchBrackets: true,
-      mode: "text",
-      indentWithTabs: true,
-      tabMode: "indent",
-      indentUnit: 0,
-      delay: { show: 500, hide: 100 },
-    });
-
-    var template_area = document.getElementById("template");
-    var template_editor = CodeMirror.fromTextArea(template_area, {
-      lineNumbers: true,
-      theme: "shadowfox",
-      mode: "text",
-      indentWithTabs: true,
-      tabMode: "indent",
-      indentUnit: 0,
-      delay: { show: 500, hide: 100 },
-    });
-
-    var result_area = document.getElementById("result");
-    var result_editor = CodeMirror.fromTextArea(result_area, {
-      lineNumbers: true,
-      theme: "shadowfox",
-      mode: "javascript",
-      indentWithTabs: true,
-      tabMode: "indent",
-      indentUnit: 0,
-      delay: { show: 300, hide: 100 },
-      readOnly: true,
-    });
-
-    text_editor.on("change", (e) => {
-      const template_text = template_editor.doc.getValue();
-      const cli_text = text_editor.getDoc().getValue();
-      $.ajax({
-        type: "POST",
-        url: `/api/${selected_mode}/`,
-        data: { inputtext: cli_text, fsmtxt: template_text,fsmmode:document.getElementById("fsmmode").checked },
-        headers: { "X-CSRFToken": "{{csrf_token}}" },
-        success: function (result) {
-          var jsonPretty = JSON.stringify(result, null, "\t");
-          result_editor.getDoc().setValue(jsonPretty);
-        },
-      });
-    });
-
-    template_editor.on("change", () => {
-      const template_text = template_editor.doc.getValue();
-      const cli_text = text_editor.getDoc().getValue();
-      $.ajax({
-        type: "POST",
-        url: `/api/${selected_mode}/`,
-        data: { inputtext: cli_text, fsmtxt: template_text,fsmmode: document.getElementById("fsmmode").checked },
-        headers: { "X-CSRFToken": "{{csrf_token}}" },
-        success: function (result) {
-          var jsonPretty = JSON.stringify(result, null, "\t");
-          result_editor.getDoc().setValue(jsonPretty);
-        },
-      });
-    });
-    document.getElementById("fsmmode").onchange= function() {
-      console.log("fsmmode chnage")
-      const template_text = template_editor.doc.getValue();
-      const cli_text = text_editor.getDoc().getValue();
-      $.ajax({
-        type: "POST",
-        url: `/api/${selected_mode}/`,
-        data: { inputtext: cli_text, fsmtxt: template_text,fsmmode: document.getElementById("fsmmode").checked },
-        headers: { "X-CSRFToken": "{{csrf_token}}" },
-        success: function (result) {
-          var jsonPretty = JSON.stringify(result, null, "\t");
-          result_editor.getDoc().setValue(jsonPretty);
-        },
-      });
+   // Debounce function
+function debounce(func, wait) {
+  let timeout;
+  return function (...args) {
+    const later = () => {
+      clearTimeout(timeout);
+      func.apply(this, args);
     };
-  
+    clearTimeout(timeout);
+    timeout = setTimeout(later, wait);
+  };
+}
 
-    function doSplit(split_array) {
-      if (split_size != split_array.length) {
-        $(".gutter-horizontal").remove();
-        Split(split_array, {
-          gutterSize: 4,
-        });
-        split_size = split_array.length;
-      }
-    }
+let selected_mode = "textfsm";
+let split_size = 2;
 
-    function setParseMode(mode) {
-      var split_js = undefined;
-      selected_mode = mode;
-      template_editor
-        .getDoc()
-        .setValue(`And your ${selected_mode} template here`);
-      template_editor.setOption("readOnly", false);
+document.getElementById("text_input").value = "Enter your CLI text here";
+document.getElementById("template").value = `And your ${selected_mode} template here`;
+document.getElementById("result").value = `View your result here`;
 
-      if (selected_mode == "textfsm") {
-        $("#split-1").show();
-        $("#template_textarea").show();
-        text_editor.getDoc().setValue(`Enter your CLI here`);
-        result_editor.getDoc().setValue(`View your rendered data here`);
-        text_editor.setOption("mode", "text");
-        template_editor.setOption("mode", "text");
-        doSplit(["#split-0", "#split-1", "#split-2"]);
-      }
-    }
+var txt_area = document.getElementById("text_input");
+var text_editor = CodeMirror.fromTextArea(txt_area, {
+  lineNumbers: true,
+  theme: "shadowfox",
+  matchBrackets: true,
+  mode: "text",
+  indentWithTabs: true,
+  tabMode: "indent",
+  indentUnit: 0,
+  delay: { show: 500, hide: 100 },
+});
+
+var template_area = document.getElementById("template");
+var template_editor = CodeMirror.fromTextArea(template_area, {
+  lineNumbers: true,
+  theme: "shadowfox",
+  mode: "text",
+  indentWithTabs: true,
+  tabMode: "indent",
+  indentUnit: 0,
+  delay: { show: 500, hide: 100 },
+});
+
+var result_area = document.getElementById("result");
+var result_editor = CodeMirror.fromTextArea(result_area, {
+  lineNumbers: true,
+  theme: "shadowfox",
+  mode: "javascript",
+  indentWithTabs: true,
+  tabMode: "indent",
+  indentUnit: 0,
+  delay: { show: 300, hide: 100 },
+  readOnly: true,
+});
+
+const sendRequest = debounce(() => {
+  const template_text = template_editor.doc.getValue();
+  const cli_text = text_editor.getDoc().getValue();
+  $.ajax({
+    type: "POST",
+    url: `/api/${selected_mode}/`,
+    data: {
+      inputtext: cli_text,
+      fsmtxt: template_text,
+      fsmmode: document.getElementById("fsmmode").checked
+    },
+    headers: { "X-CSRFToken": "{{csrf_token}}" },
+    success: function (result) {
+      var jsonPretty = JSON.stringify(result, null, "\t");
+      result_editor.getDoc().setValue(jsonPretty);
+    },
+  });
+}, 200);
+
+// Add the debounce function to the editors' change events
+text_editor.on("change", sendRequest);
+template_editor.on("change", sendRequest);
+
+document.getElementById("fsmmode").onchange = function() {
+  console.log("fsmmode change");
+  sendRequest();
+};
+
+function doSplit(split_array) {
+  if (split_size !== split_array.length) {
+    $(".gutter-horizontal").remove();
+    Split(split_array, {
+      gutterSize: 4,
+    });
+    split_size = split_array.length;
+  }
+}
+
+function setParseMode(mode) {
+  selected_mode = mode;
+  template_editor.getDoc().setValue(`And your ${selected_mode} template here`);
+  template_editor.setOption("readOnly", false);
+
+  if (selected_mode == "textfsm") {
+    $("#split-1").show();
+    $("#template_textarea").show();
+    text_editor.getDoc().setValue(`Enter your CLI here`);
+    result_editor.getDoc().setValue(`View your rendered data here`);
+    text_editor.setOption("mode", "text");
+    template_editor.setOption("mode", "text");
+    doSplit(["#split-0", "#split-1", "#split-2"]);
+  }
+}
+
   </script>
   <script>
     setParseMode("textfsm");
