--- a/appgui/templates/gui.html
+++ b/appgui/templates/gui.html
@@ -1,3 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TextFSM Parser</title>
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/static/css/codemirror.css" />
+  <link rel="stylesheet" href="/static/css/shadowfox.css" />
+  <link rel="stylesheet" href="/static/css/parseatron.css?ver=123" />
+  <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
+  <script src="/static/js/jquery.min.js"></script>
+  <script src="/static/js/codemirror.js"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">TextFSM Parser</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Templates
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              {% if obj %} {% for model in obj %}
+              <li class="dropdown-item template_id" value="{{model.id}}">id: {{model.id}} sub_id: {{model.sub_id}}</li>
+              {% endfor %} {% else %}
+              <li class="dropdown-item">No templates found in database</li>
+              {% endif %}
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <span> Header Mode &nbsp;</span>
+      <span><input id="fsmmode" type="checkbox"></span>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row gx1">
+      <div class="split">
+        <div id="split-0">
+          <div class="editor" id="text_textarea">
+            <textarea id="text_input" type="text" v-model="cli_text">
+              </textarea>
+          </div>
+        </div>
+        <div id="split-1">
+          <div class="editor" id="template_textarea">
+            <textarea id="template" v-model="message"> </textarea>
+          </div>
+        </div>
+        <div id="split-2">
+          <div class="editor" id="result_textarea">
+            <textarea id="result" v-model="message"> </textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="/static/js/split.js"></script>
+  <script src="/static/js/javascript.js"></script>
+  <script src="/static/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="/static/js/parser.js"></script> -->
+  <script>
 // Debounce function to limit the frequency of function calls
 function debounce(func, wait) {
   let timeout;
@@ -143,3 +217,41 @@ function setParseMode(mode) {
 document.addEventListener('DOMContentLoaded', function() {
   loadFromLocalStorage();
 });
+
+  </script>
+  <script>
+    setParseMode("textfsm");
+  </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Get all elements with the class 'nav-link'
+      var navLinks = document.querySelectorAll(".template_id");
+
+      // Loop through each nav link and add a click event listener
+      navLinks.forEach(function (link) {
+        link.addEventListener("click", function (event) {
+          // Prevent default link behavior
+          event.preventDefault();
+          $.ajax({
+            type: "POST",
+            url: "/api/get-template/",
+            data: { template_id: link.value },
+            headers: { "X-CSRFToken": "{{csrf_token}}" },
+            success: function (result) {
+              template_editor.getDoc().setValue(result.template);
+              text_editor.getDoc().setValue(result.text);
+
+
+            },
+          });
+
+          // For example, you can add additional actions such as navigation or displaying content
+        });
+      });
+    });
+  </script>
+
+  <!-- Add your other scripts and inline scripts here -->
+</body>
+
+</html>
